# voice-assistant-prod

./: .dockerignore  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.json  ACTION_PLAN_MAINPC.md  ACTUAL_COMPLIANCE_STATUS.md  ACTUAL_VERIFICATION_RESULTS.md  AGENT1_BUILD_BASE.sh  AGENT2_BUILD_FAMILY.sh  AGENT3_BUILD_CPU_SERVICES.sh  AGENT_ANALYSIS_PROMPT.md  AGENT_CONFIGURATION_AUDIT.md  AGENT_DOCUMENTATION.md  AGENT_DOCUMENTATION_AUDIT.md  AGENT_PATTERNS_QUICK_REF.md  AGENT_VALIDATION_SYSTEM_SUMMARY.md  AI_CONSOLIDATION_ANALYSIS_TEMPLATE.md  AI_CURSOR_INTELLIGENCE_INTEGRATION_GUIDE.md  AI_FEEDBACK_ANALYSIS.md  AI_SYSTEM_ARCHITECTURE.md  AI_SYSTEM_CODEBASE_AUDIT_REPORT.md  AI_SYSTEM_MIGRATION_CHECKLIST.md  ARCHITECTURAL_CONSOLIDATION_PROPOSAL.md  ARCHITECTURE.md  AUTOMATED_MAINPC_CRON.sh  AUTO_SYNC_IMPLEMENTATION.md  BACKGROUND_AGENT_ANALYSIS_PROMPT.md  BACKGROUND_AGENT_COMPLETE_INSTRUCTIONS.md  BACKGROUND_AGENT_GUIDE.md  BACKGROUND_AGENT_IMPLEMENTATION_REQUEST.md  BACKGROUND_AGENT_INSTRUCTIONS_MAXMODE.md  BACKGROUND_AGENT_LOGICAL_GROUPING_TASK.md  BACKGROUND_AGENT_PROMPT.md  BACKGROUND_AGENT_QUERY.md  BACKGROUND_AGENT_REPORT.md  BAFINDINGS.MD  BASEAGENT_OPTIMIZATION_BEST_PRACTICES_GUIDE.md  BASELINE_REPORT_PART1.md  (+818 more)
affective_processing_center/: .dockerignore  Dockerfile  Dockerfile.optimized  README.md  __init__.py  app.py  deployment_plan.md  docker-compose.yml  pyproject.toml  requirements.txt  verification_gate.py
affective_processing_center/config/: __init__.py  default.yaml
affective_processing_center/core/: __init__.py  cache.py  dag_executor.py  fusion.py  gpu_lease_client.py  schemas.py
affective_processing_center/modules/: __init__.py  base.py  empathy.py  human_awareness.py  mood.py  synthesis.py  tone.py  voice_profile.py
affective_processing_center/resiliency/: circuit_breaker.py
affective_processing_center/tests/: __init__.py
affective_processing_center/transport/: zmq_pub.py  zmq_req.py
common/: config_manager.py  env_defaults.py  env_helpers.py  health.py  hybrid_api_manager.py  pyproject.toml
common/api/: contract.py  openapi_generator.py  standard_contracts.py
common/audit/: __init__.py  audit_trail.py
common/backends/: __init__.py  memory_backend.py  redis_backend.py
common/config/: __init__.py  unified_config_manager.py  validation.py
common/constants/: service_names.py
common/core/: advanced_health_monitoring.py  advanced_service_discovery.py  base_agent.bak.ports  base_agent.py  enhanced_base_agent.py  unified_config_manager.py
common/error_bus/: dashboard.py  docker-compose.yml  nats_client.py  nats_error_bus.py  unified_error_handler.py
common/factories/: __init__.py  agent_factory.py  enhanced_agent_factory.py
common/health/: __init__.py  standardized_health.py  unified_health.py
common/lifecycle/: __init__.py  agent_lifecycle.py
common/logging/: __init__.py  log_aggregator.py  structured_logger.py
common/monitoring/: __init__.py  grafana_dashboards.json  health_monitor.py  prometheus_exporter.py
common/observability/: logging.py  metrics.py  migration_metrics.py  tracing.py
common/performance/: caching.py  optimizer.py  profiler.py
common/pools/: __init__.py  async_zmq_pool.py  http_pool.py  redis_pool.py  sql_pool.py  zmq_pool.py
common/reasoning/: __init__.py  engine.py
common/resiliency/: bulkhead.py  health_monitor.py  retry.py
common/resources/: __init__.py  resource_manager.py
common/security/: access_control.py  authentication.py  encryption.py
common/service_mesh/: client.py  unified_discovery_client.py
common/utils/: agent_ready_signal.py  async_io.py  circuit_breaker.py  data_models.py  docker_paths.py  env_standardizer.py  error_publisher.py  fast_json.py  hostname_resolver.py  learning_models.py  legacy_metrics_support.py  log_setup.py  logger_util.py  main_runner.py  path_env.py  path_manager.py  prometheus_exporter.py  redis_pool.py  secret_manager.py  shared_utilities.py  unified_config_loader.py  zmq_helper.py
common/validation/: __init__.py  config_validator.py
model_ops_coordinator/: .dockerignore  COMPLETE_PROJECT_REVIEW.md  Dockerfile  Dockerfile.optimized  PHASE6_VERIFICATION.md  PHASE7_VERIFICATION.md  PROJECT_SUMMARY.md  README.md  __init__.py  app.py  model_ops_pb2.py  model_ops_pb2_grpc.py  network_util.py  pyproject.toml  requirements.txt
model_ops_coordinator/adapters/: __init__.py  event_bus_adapter.py  local_worker.py  remote_worker.py  scheduler_client.py
model_ops_coordinator/config/: __init__.py  default.yaml  hybrid_policy.yaml  loader.py
model_ops_coordinator/core/: __init__.py  errors.py  goal_manager.py  gpu_manager.py  inference.py  kernel.py  learning.py  lifecycle.py  schemas.py  telemetry.py  vram_module.py
model_ops_coordinator/deploy/: docker-compose.yml
model_ops_coordinator/docs/: api_documentation.md  security_audit.md
model_ops_coordinator/proto/: model_ops.proto
model_ops_coordinator/resiliency/: __init__.py
model_ops_coordinator/tests/: __init__.py  test_benchmark.py  test_gpu_lease.py  test_integration.py  test_kernel.py
model_ops_coordinator/transport/: __init__.py  grpc_server.py  rest_api.py  zmq_server.py
real_time_audio_pipeline/: .dockerignore  DEPLOYMENT_VERIFICATION.md  Dockerfile  Dockerfile.optimized  LEGACY_DECOMMISSIONING_PLAN.md  RISK_MITIGATION_CHECKLIST.md  app.py  deploy.sh  docker-compose.yml  pyproject.toml  requirements.runtime.txt  requirements.txt
real_time_audio_pipeline/config/: default.yaml  loader.py  main_pc.yaml  pc2.yaml
real_time_audio_pipeline/core/: buffers.py  gpu_lease_client.py  pipeline.py  telemetry.py
real_time_audio_pipeline/docker/: entrypoint.sh  healthcheck.sh
real_time_audio_pipeline/proto/: transcript.proto
real_time_audio_pipeline/resiliency/: bulkhead.py  circuit_breaker.py
real_time_audio_pipeline/tests/: __init__.py  test_config_loader.py  test_final_verification.py  test_latency.py  (+3 more)
unified_observability_center/: Dockerfile  Dockerfile.optimized  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.noprophet.txt  requirements.txt
(+4528 files in other folders)
