[project]
name = "ai_system"
version = "0.1.0"
description = "AI System Monorepo"
requires-python = ">=3.8"
dependencies = [
    "pyzmq",
    "pydantic",
    "psutil",
    "pyyaml",
    "redis"
]

[project.optional-dependencies]
ha = [
    "redis>=4.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "main_pc_code*", "pc2_code*", "utils*", "src*"] 

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded by ^/ will apply only to files and directories
# in the root of the project.
(
  ^/whisper\.cpp/.*$
  | ^/logs/.*$
  | ^/__pycache__/.*$
  | ^/\.git/.*$
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["agents", "services", "utils", "config"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "logs",
    "whisper.cpp",
    ".pytest_cache"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "whisper.cpp/",
    "logs/",
    "__pycache__/"
] 