[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory_system"
version = "0.0.0-dev"
description = "Memory System package skeleton"
requires-python = ">=3.8"
authors = [{ name = "Memory System Team" }]
dependencies = [
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3"
]

[project.scripts]
memoryctl = "memory_system.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "coverage>=7.3.0",
    "mypy>=1.5.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

vector = [
    "chromadb>=0.4.24",
    "sentence-transformers>=2.2.2",
    "qdrant-client>=1.6.0",
]

tui = [
    "rich>=13.7.0",
]

[tool.hatch.build]
include = [
    "memory_system/**/*.py",
    "*.md",
    "*.txt",
    "*.yaml",
    "*.yml",
    "*.toml"
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/test_*",
    "**/tests/*",
    "**/.git",
    "**/.pytest_cache",
    "**/.mypy_cache"
]

[tool.hatch.build.targets.wheel]
packages = [
    "memory_system"
] 
