[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model_ops_coordinator"
version = "0.1.0"
description = "Model Operations Coordinator for AI System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
    "nats-py>=2.5.0",
    "redis>=4.5.0",
    "psutil>=5.9.0",
    "pyzmq>=25.0.0",
    "torch>=2.2.0",
    "transformers>=4.35.0",
    "pydantic>=2.0.0",
    "prometheus-client>=0.18.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["model_ops_coordinator*", "core*", "adapters*", "transport*", "resiliency*"]