[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "real_time_audio_pipeline"
version = "0.1.0"
description = "Real-Time Audio Pipeline for AI System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sounddevice>=0.4.6",
    "pyaudio>=0.2.11",
    "numpy>=1.24.0",
    "whisper>=1.1.10",
    "pyzmq>=25.0.0",
    "redis>=4.5.0",
    "prometheus-client>=0.18.0",
    "psutil>=5.9.0",
    "websockets>=11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["real_time_audio_pipeline*", "core*", "transport*", "resiliency*"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",  # Use of assert
    "S311",  # Random generators for crypto
    "B008",  # Function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "S311", "B008"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sounddevice.*",
    "pvporcupine.*",
    "whisper_timestamped.*",
    "fasttext.*",
    "prometheus_client.*",
    "zmq.*",
    "pytest.*",
    "psutil.*",
]
ignore_missing_imports = true
