[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self_healing_supervisor"
version = "0.1.0"
description = "Self-Healing Supervisor for AI System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "docker>=6.1.0",
    "prometheus-client>=0.18.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["self_healing_supervisor*", "core*"]